03-Kubernetes/files/kubernetes-dashboard/dashboard-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  selector:
    app.kubernetes.io/name: kubernetes-dashboard-web
  ports:
  - port: 443
    targetPort: 8000
    protocol: TCP
    name: https
  type: ClusterIP
